<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/rentCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="9dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <ImageView
                android:id="@+id/adminImage"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <TextView
                android:id="@+id/rentBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textColor="@color/white"
                android:paddingStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/rentModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textColor="@color/white"
                android:paddingStart="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/rentRegNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrationNo"
                android:textColor="@color/white"
                android:paddingRight="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textColor="@color/white"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="50dp"
                android:textSize="15dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>