<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookCar"
    android:background="#ADD8E6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:overScrollMode="never">
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="16dp"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/border" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="16dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:focusable="false"
                    android:background="@drawable/border" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:focusable="false"
                    android:background="@drawable/border"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/days"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_days"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/totAmount"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_totAmount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:paddingEnd="10dp"/>


                <Button
                    android:id="@+id/btn_book"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_signup"
                    android:text="@string/bookCar"
                    android:textColor="@color/white"
                    />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>