<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRent"
    android:background="#ADD8E6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:overScrollMode="never">
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/upload" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textSize="16dp"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/et_brand"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/border" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textSize="16dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/et_model"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/border" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/registrationNo"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_registrationNo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Description"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:paddingEnd="10dp"/>


                <Button
                    android:id="@+id/btn_rentCar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/btn_signup"
                    android:text="@string/RenturCar"
                    android:textColor="@color/white"
                    />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>